--- a/Examples/Stereo/optor1.yaml
+++ b/Examples/Stereo/optor1.yaml
@@ -5,10 +5,10 @@
 #--------------------------------------------------------------------------------------------
 
 # Camera calibration and distortion parameters (OpenCV) 
-Camera.fx: 464.171182
-Camera.fy: 463.936132
-Camera.cx: 351.531858
-Camera.cy: 277.788378
+Camera.fx: 453.492682
+Camera.fy: 453.492682
+Camera.cx: 379.997398
+Camera.cy: 241.403059
 
 Camera.k1: 0.0
 Camera.k2: 0.0
@@ -40,22 +40,22 @@ LEFT.D: !!opencv-matrix
    rows: 1
    cols: 5
    dt: d
-   data: [-0.39443196266938496, 0.1254954644452372, 0.0011513930017305488, -0.00012507694303954476, 0.0]
+   data: [-0.380800, 0.114514, -0.004890, -0.001906, 0.000000]
 LEFT.K: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [474.8295096499824, 0.0, 401.5680511938268, 0.0, 475.2191266488672, 214.05115945690542, 0.0, 0.0, 1.0]
+   data: [454.812772, 0.000000, 397.120001, 0.000000, 452.989403, 228.597388, 0.000000, 0.000000, 1.000000]
 LEFT.R:  !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [0.9958031603596934, 0.006129830218029643, 0.09131533824689565, -0.005643403678477136, 0.9999684841800435, -0.005584141974181675, -0.09134669021135129, 0.005045376910023414, 0.9958063699129801]
+   data: [0.999955, -0.001279, 0.009411, 0.001265, 0.999998, 0.001524, -0.009413, -0.001512, 0.999955]
 LEFT.P:  !!opencv-matrix
    rows: 3
    cols: 4
    dt: d
-   data: [443.6224435511066, 0.0, 320.84138107299805, 0.0, 0.0, 443.6224435511066, 222.76853942871094, 0.0, 0.0, 0.0, 1.0, 0.0]
+   data: [453.492682, 0.000000, 379.997398, 0.000000, 0.000000, 453.492682, 241.403059, 0.000000, 0.000000, 0.000000, 1.000000, 0.000000]
 
 RIGHT.height: 480
 RIGHT.width: 752
@@ -63,22 +63,22 @@ RIGHT.D: !!opencv-matrix
    rows: 1
    cols: 5
    dt: d
-   data: [-0.4013656131957505, 0.14322052153117448, 0.00047367669720385907, 0.0013058112541160314, 0.0]
+   data: [-0.394637, 0.134148, -0.001294, -0.001776, 0.000000]
 RIGHT.K: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [462.9948281227462, 0.0, 363.90616126222085, 0.0, 462.97193486648536, 221.31766453254573, 0.0, 0.0, 1.0]
+   data: [458.719606, 0.000000, 372.365934, 0.000000, 455.914300, 263.726870, 0.000000, 0.000000, 1.000000]
 RIGHT.R:  !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [0.9956650954748747, 0.006333618592450529, 0.09279495098621501, -0.00682776577524474, 0.9999641469247065, 0.005008640500407358, -0.09275990118325415, -0.005620510712496607, 0.9956726422834985]
+   data: [0.999935, -0.002227, -0.011225, 0.002210, 0.999996, -0.001530, 0.011228, 0.001505, 0.999936]
 RIGHT.P:  !!opencv-matrix
    rows: 3
    cols: 4
    dt: d
-   data: [443.6224435511066, 0.0, 320.84138107299805, -44.90738147736538, 0.0, 443.6224435511066, 222.76853942871094, 0.0, 0.0, 0.0, 1.0, 0.0]
+   data: [453.492682, 0.000000, 379.997398, -43.976993, 0.000000, 453.492682, 241.403059, 0.000000, 0.000000, 0.000000, 1.000000, 0.000000]
 
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
@@ -114,7 +114,8 @@ Viewer.ViewpointY: -0.7
 Viewer.ViewpointZ: -1.8
 Viewer.ViewpointF: 500
 
-# #--------------------------------------------------------------------------------------------
-# # Map Parapeters
-# #--------------------------------------------------------------------------------------------
-# Map.mapfile: map.bin
+#--------------------------------------------------------------------------------------------
+# Map Parapeters
+#--------------------------------------------------------------------------------------------
+Map.mapfile: map.bin
+
